[package]
name = "custom-host-function"
version = "0.1.0"
edition = "2021"

[dependencies]
sp-std = { version = "8.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-runtime-interface = {version ="17.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0"}
sp-externalities = { version = "0.19.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

rust-bert = { default-features = false, git = "https://github.com/guillaume-be/rust-bert.git", branch = "main", optional = true }
tch = { version = "0.15.0", optional = true  }
log = {version = "0.4"}

[features]
default = ["std"]
std = ["sp-externalities/std", "sp-runtime-interface/std", "tch", "rust-bert", "rust-bert/remote", "rust-bert/default-tls" ]

