[package]
name = "custom-host-function"
version = "0.1.0"
edition = "2021"

[dependencies]
sp-std = { version = "8.0.0", default-features = false, git = "https://github.com/moonsong-labs/substrate.git", branch = "crystalin-v1.0.0-long-duration-block" }
sp-runtime-interface = {version ="17.0.0", default-features = false, git = "https://github.com/moonsong-labs/substrate.git", branch = "crystalin-v1.0.0-long-duration-block" }
sp-externalities = { version = "0.19.0", default-features = false, git = "https://github.com/moonsong-labs/substrate.git", branch = "crystalin-v1.0.0-long-duration-block" }

futures = { version = "0.3.21", features = ["compat"]}
once_cell = { version = "1.8.0", optional = true }
log = {version = "0.4"}
jsonrpsee = { version = "0.22.4", features = ["http-client"], optional = true }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[features]
default = ["std"]
std = ["sp-externalities/std", "sp-runtime-interface/std", "once_cell", "jsonrpsee", "serde/std", "serde_json/std"]

